Fix the alignment of the second notification

--- a/static/sass/styles.scss
+++ b/static/sass/styles.scss
@@ -363,10 +363,6 @@ summary {
   td {
     padding-left: 0.5rem;
     padding-right: 0.5rem;
-
-    &:last-child {
-      padding-right: 0.5rem;
-    }
   }
 
   .p-table__row {
